# fritzcollectd

./: .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE.txt  README.rst  fritzcollectd.py  requirements.txt  setup.cfg  setup.py  test_fritzcollectd.py  tox.ini
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docker/grafana-fritzcollectd/: Dockerfile
docker/grafana-fritzcollectd/dashboards/: dashboards.yaml
docker/grafana-fritzcollectd/datasources/: influxdb.yaml
docker/grafana-provisioning/: Dockerfile
docker/grafana-provisioning/datasources/: influx.yaml
docker/influx-provisioning/: Dockerfile  influxdb.conf
docker/influxdb-collectd/: Dockerfile
fritzcollectd/: __init__.py
tests/: test_fritzcollectd.py
