[metadata]
name = fritzcollectd
summary = A collectd plugin for monitoring AVM FRITZ!Box routers
description-file = README.rst
url = https://github.com/fetzerch/fritzcollectd
author = Christian Fetzer
author-email = fetzer.ch@gmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: System :: Monitoring
keywords = AVM FritzBox collectd

[files]
packages = fritzcollectd
